# cab

./: .gitignore  Cargo.toml  README.md  simplify.txt  stubs.js
design/: README.md  equivalent.json  equivalent.jsonl
resources/: equivalent.txt  informal.txt  override_corrections.txt  prerequisite_corrections.txt  program_buckets.txt  subjects.txt
src/: data_file_help.rs  download.rs  draw.rs  graph.rs  logic.rs  main.rs  normalize.rs  parse_prerequisite_string.rs  process.rs  request.rs  restrictions.rs  subject.rs
src/json/: encode.rs  json_string.rs  mod.rs
