[package]
name = "cab"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1.5.4"
once_cell = "1.8.0"
rand = "0.8.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bytes = "1.1"
